--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 
     <link href="bootstrap.min.css" rel="stylesheet">
+    <style>
+        .table {
+            vertical-align: middle;
+        }
+    </style>
 
     <title>Orthanc GUI</title>
 </head>
@@ -74,7 +79,7 @@
         </div>
     </div>
 
-    <table class="table table-striped table-hover" id="patientTable">
+    <table class="table table-striped table-hover" id="studiesTable">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -87,7 +92,7 @@
             <th scope="col"></th>
           </tr>
         </thead>
-        <tbody id="patientTableBody">
+        <tbody id="studiesTableBody">
         </tbody>
     </table>
 
