--- a/split.html
+++ b/split.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-
     <link href="bootstrap.min.css" rel="stylesheet">
-
     <title>Orthanc GUI</title>
 </head>
 <body>
@@ -13,6 +11,14 @@
         <div class="card-header">
             <button id="returnButton" type="submit" class="btn btn-primary"></button>
         </div>
+
+        <div class="card border-danger">
+            <div class="card-header">Pasos</div>
+            <div class="card-body text-danger">
+                <p class="card-text" id="splitMessage"></p>
+            </div>
+        </div>
+
         <div class="card-body">
             <h4 class="card-title" id="accessionNo"></h4>
             <h4 class="card-title" id="patientName"></h4>
@@ -20,23 +26,24 @@
             <h4 class="card-title" id="studyDate"></h4>
             <h4 class="card-title" id="studyDesc"></h4>
         </div>
-        <div class="card-footer text-muted">Series</div>
+
+        <div class="card-header">
+            <button id="splitButton" type="submit" class="btn btn-warning"></button>
+        </div>
     </div>
 
-    <table class="table table-striped table-hover" id="patientTable">
+    <table class="table table-striped table-hover" id="seriesTable">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col" id="colNameLabel"></th>
-            <th scope="col" id="colAccessionNoLabel"></th>
-            <th scope="col" id="colPatientIdLabel"></th>
-            <th scope="col" id="colStudyDateLabel"></th>
+            <th scope="col" id="colSeriesNoLabel"></th>
+            <th scope="col" id="colSeriesDescLabel"></th>
+            <th scope="col" id="colBodyPartExaminedLabel"></th>
             <th scope="col" id="colModalityLabel"></th>
-            <th scope="col" id="colDescription"></th>
+            <th scope="col" id="colStationName"></th>
             <th scope="col"></th>
           </tr>
         </thead>
-        <tbody id="patientTableBody">
+        <tbody id="seriesTableBody">
         </tbody>
     </table>
 
