--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <span class="sr-only" id="searchLabel"></span>
                     </button>
                     <button id="cleanButton" type="submit" class="btn btn-primary mb-3"></button>
+                    <button id="exportButton" type="submit" class="btn btn-primary mb-3"></button>
                 </div>
                 <div class="col-sm-2"> 
                     <label for="modality" class="col-form-label" id="destLabel"></label>
@@ -75,7 +76,7 @@
             </div>
         </div>
         <div class="progress">
-            <div id="progress" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+            <div id="progress" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
 
