fix store destination

--- a/split.html
+++ b/split.html
@@ -41,7 +41,10 @@
         </div>
 
         <div class="card-header">
-            <button id="splitButton" type="submit" class="btn btn-warning"></button>
+            <div class="row mx-md-n5">
+                <div class="col px-md-5"><button id="splitButton" type="submit" class="btn btn-warning"></button></div>
+                <div class="col px-md-5"><button id="deleteButton" type="submit" class="btn btn-danger"></button></div>
+            </div>
         </div>
     </div>
 
@@ -52,6 +55,9 @@
             <th scope="col" id="colSeriesDescLabel"></th>
             <th scope="col" id="colBodyPartExaminedLabel"></th>
             <th scope="col" id="colModalityLabel"></th>
+            <th scope="col" id="colProtocolName"></th>
+            <th scope="col" id="colSeriesDate"></th>
+            <th scope="col" id="colSeriesTime"></th>
             <th scope="col" id="colStationName"></th>
             <th scope="col"></th>
           </tr>
